--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-loader-spinner": "^6.1.6",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.27.0",
